--- a/subgraph.yaml
+++ b/subgraph.yaml
@@ -1,4 +1,4 @@
-specVersion: 0.0.1
+specVersion: 0.0.2
 schema:
   file: ./schema.graphql
 dataSources:
@@ -8,6 +8,7 @@ dataSources:
     source:
       address: "0xcc6C63044BFE4e991f3a13b35b6Ee924B54CD304"
       abi: Lore
+      startBlock: 22765408
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.5
